# miketang84-forum001

./: .dockerignore  .env.example  .plan  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
assets/: tailwind.css
migrations/: 20260508215800_initial.sql  20260508221300_users.sql  20260508222500_sessions.sql  20260508225500_categories.sql  20260508231000_threads_posts.sql  20260509002000_user_bans.sql  20260509003000_full_text_search.sql
src/: admin.rs  auth.rs  categories.rs  config.rs  login.rs  main.rs  markdown.rs  models.rs  pagination.rs  password.rs  posts.rs  profile.rs  registration.rs  search.rs  session.rs  settings.rs  state.rs  templates.rs  threads.rs
static/: app.css
templates/: admin_categories.html  admin_category_edit.html  base.html  categories_index.html  category_detail.html  create_thread.html  edit_post.html  home.html  login.html  profile.html  register.html  search.html  settings_password.html  settings_profile.html  thread_detail.html
