[package]
name = "miketang84-forum001"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12"
axum = "0.7"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
