[package]
name = "miketang84-forum001"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
askama = "0.12"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tower-sessions = { version = "0.14", default-features = false, features = ["axum-core", "private"] }
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
